--- a/styles/products-styles.css
+++ b/styles/products-styles.css
@@ -58,19 +58,9 @@ body{
     color: black;
 }
 
-aside {
-    width: 250px;
-}
-
-main {
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
-}
-
 footer {
     background-color: #96c6b5;
-    padding: 30px 50px;
+    padding: 30px 40px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
@@ -84,6 +74,7 @@ footer {
 
 footer p {
   font-size: 22px;
+  color: black;
   font-weight: 600;
 }
 
@@ -93,4 +84,36 @@ footer a {
   color: #2e5346;
   text-decoration: underline;
   transition: color 0.3s;
+}
+
+
+aside {
+    width: 250px;
+}
+
+main {
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+}
+
+.productos {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.products-container {
+    display: grid;
+    gap: 20px;
+    padding: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    flex-grow: 1;
+}
+
+.product-item {
+    background-color: #2e5346;
+    border-radius: 5px;
+    padding: 10px;
 }
