--- a/styles/products-styles.css
+++ b/styles/products-styles.css
@@ -132,3 +132,17 @@ main {
     cursor: pointer;
     color: #96c6b5;
 }
+
+.search-products {
+    background-color: #fff;
+    border: 1px solid #948e8e;
+    border-radius: 1;
+    font-size: 16px;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
+    box-sizing: border-box;
+}
+
+aside h1, h2 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
