--- a/styles/index-styles.css
+++ b/styles/index-styles.css
@@ -1,60 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
-*{
-    box-sizing: border-box;
+:root{
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: "DM Sans", sans-serif;
     font-size: 20px;
+    --color-primario: #fcc1c4;
+    --color-secundario: #fff7ee;
+    --text-color: #000000;
+    --menu-mobile-background: #FFE2E2;
 }
 
 body{
-    background-color: #fcc1c4;
+    margin: 0;
+    padding: 0;
+    background-color: var(--color-primario);
+    color: var(--text-color)
 }
 
-.header{
-    display: flex;
-    background-color: #fff7ee;
-    justify-content: space-between;
-    align-items: center;
-    height: 85px;
-    padding: 0px 100px;
-}
-
-.header .logo{
-    cursor: pointer;
-}
-
-.header .logo img{
-    display: flex;
-    height: 85px;
-    width: auto;
-    justify-content: center;
-    transition: all 0.3s;
-}
-
-.header .logo img:hover{
-    transform: scale(1.2);
-}
-
-.header .nav-links{
-    list-style: none;
-    display: flex;
-    gap: 40px;
-   
-}
-
-.header .nav-links li:hover{
-    transform: scale(1.1);
-}
-
-.header .nav-links a{
-    font-weight: 500;
-    color: black;
+a {
     text-decoration: none;
-}
-
-.header .nav-links li a:hover{
-    color: black;
+    color: var(--text-color)
 }
 
 .slider-wrapped{
@@ -236,33 +203,4 @@ footer a {
   color: #2e5346;
   text-decoration: underline;
   transition: color 0.3s;
-}
-
-@media (max-width: 360px){
-    .main {
-        flex-direction: column;
-    }
-    .header {
-        flex-direction: column;
-        height: auto;
-        padding: 20px;
-    }
-    .header .nav-links {
-    flex-wrap: wrap;
-    gap: 20px;
-    }
-    .container-options {
-    column-gap: 20px;
-    row-gap: 20px;
-  }
-
-  .info-section {
-    grid-template-columns: 1fr;
-  }
-
-  footer {
-    grid-template-columns: 1fr;
-    text-align: center;
-  }
-    
 }
