--- a/styles/index-styles.css
+++ b/styles/index-styles.css
@@ -30,6 +30,7 @@ a {
     border-radius: 10px;
     max-width: 900px;
     margin: 0 auto;
+    margin-top: 20px;
 }
 
 .slider {
@@ -150,6 +151,51 @@ main {
     transform: translateY(-2px);
 }
 
+.info-section {
+    display: grid;
+    background-color: #FFF7EE;
+    grid-template-columns: 1fr 1fr;
+    padding: 20px 20px;
+    gap: 50px;
+    align-items: center;
+
+}
+
+.info-copy h3 {
+    font-weight: 700;
+    font-size: 32px;
+    letter-spacing: 0.4px;
+    padding: 40px;
+    margin-left: 25px;
+}
+
+.info-copy h4 {
+    font-weight: 300;
+    font-size: 28px;
+    margin-left: 65px;
+}
+
+.info-img h4 {
+    flex-basis: 100%;
+    font-weight: 300;
+    justify-self: center;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+.text-form{
+    display: flex;
+    justify-content: center;
+    font-size: 28px;
+}
+
+.contact-form{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
 @media (max-width: 830px) {
     .container-options{
         flex-direction: column;
@@ -168,58 +214,22 @@ main {
     }
 }
 
-.info-section {
-    display: grid;
-    background-color: #FFF7EE;
-    grid-template-columns: 1fr 1fr;
-    padding: 20px 70px;
-    gap: 50px;
-}
+@media (max-width:830px) {
+    .info-section{
+        grid-template-columns: 1fr;
+        padding: 30px 40px;
+        gap:30px;
+    }
 
-.info-copy h3 {
-    font-weight: 700;
-    font-size: 32px;
-    letter-spacing: 0.4px;
-    padding: 40px;
-    margin-left: 25px;
-}
+    .info-copy h3{
+        font-size: 28px;
+    }
 
-.info-copy h4 {
-    font-weight: 300;
-    font-size: 28px;
-    margin-left: 65px;
-}
+    .info-copy h4{
+        font-size: 20px;
+    }
 
-.info-img h4 {
-    font-weight: 300;
-    justify-self: center;
-    padding: 10px;
-    margin-bottom: 15px;
-}
-
-footer {
-    background-color: #96c6b5;
-    padding: 30px 50px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
-}
-
-.first-column,
-.second-column {
-    display: flex;
-    flex-direction: column;
-}
-
-footer p {
-  font-size: 22px;
-  font-weight: 600;
-}
-
-footer a {
-  display: block;
-  margin: 5px 0;
-  color: #2e5346;
-  text-decoration: underline;
-  transition: color 0.3s;
+    .info-copy img{
+        max-width: 100px;
+    }
 }
