--- a/styles/navbar-style.css
+++ b/styles/navbar-style.css
@@ -3,7 +3,7 @@
     background-color: #fff7ee;
     justify-content: space-between;
     align-items: center;
-    padding: 0 100px;
+    padding: 10px 20%;
 }
 
 .navbar{
