--- a/styles/navbar-style.css
+++ b/styles/navbar-style.css
@@ -79,6 +79,18 @@
     display: none;
 }
 
+.cart-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.carrito{
+    width: 22px;
+    cursor: pointer;
+    padding: 10px 22px 0 ;
+}
+
 @media (max-width: 830px){
     .menu-btn{
         display: block;
