--- a/styles/navbar-style.css
+++ b/styles/navbar-style.css
@@ -74,8 +74,9 @@
 }
 
 .menu-btn img{
-    width: 35px;
-    height: 35px; 
+    width: 40px;
+    height: 40px;
+    margin-left: 50px; 
 }
 
 .close-menu{
@@ -90,13 +91,17 @@
 }
 
 .carrito{
-    width: 22px;
+    width: 24px;
     cursor: pointer;
-    padding: 0;
-    height: 22px;
+    padding: 50px; /*alineado con el carrusel sino queda muy solo a la derecha*/
+    height: 24px;
 }
 
-@media (max-width: 950px){
+.carrito:hover{
+    transform: scale(1.1);
+}
+
+@media (max-width: 975px){
     .navbar {
         display: grid; /*desktop flex y vistas chicas grid porque el logo no se me centraba y me pareció mejor ubicar el menú del lado izq como está en varias paginas*/
         grid-template-columns: 1fr auto 1fr; /*tres columnas una para cada componente*/
@@ -109,8 +114,8 @@
     }
 
     .menu-btn{
-        grid-column: 1;
-        align-items: start;
+        display: flex;
+        justify-content: flex-start;
     }
 
     .open-menu {
@@ -123,29 +128,30 @@
 
     .nav-links{
         display: none;
-        grid-column: 3;
-        align-items: end;
+        flex-direction: column;
+        grid-column: 1;
         position: absolute;
-        top: 100%;
+        top: 111%; /*lo mas alineado posible al nav asi no le da toc al profe*/
         left: 0;
-        width: 100%; /*debería rellenar el fondo de todo el menu pero no lo hace?*/
+        width: 40%; /*debería rellenar el fondo de todo el menu pero no lo hace?*/
         align-items: center;
         text-align: center;
-        margin: 0 auto;
         background-color: var(--menu-mobile-background);
         padding: 20px 0;
-        z-index: 99; /*trae el menu hacia adelante, por la imagen no se veia*/
+        z-index: 99;
     }
 
     .nav-links li {
         width: 100%;
+        margin: 0;
     }
 
     .nav-links a{
         display: block;
         width: 100%;
-        text-align: center;
-        padding: 10px 0;
+        text-align: start;
+        margin-left: 30px;
+        padding: 1px;
     }
 
     .menu-toggle:checked + .menu-btn .open-menu {
