--- a/styles/index-styles.css
+++ b/styles/index-styles.css
@@ -235,6 +235,10 @@ main {
     margin-left: 65px;
 }
 
+.info-img img{
+    margin-left: 30px;
+}
+
 .info-img h4 {
     flex-basis: 100%;
     font-weight: 300;
@@ -256,7 +260,7 @@ main {
     margin-bottom: 30px;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1055px) {
 
     .slider-wrapped-mobile{
     display: block;
@@ -294,21 +298,20 @@ main {
     }
 
     .info-section{
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
         padding: 30px 40px;
         gap:30px;
     }
 
-    .info-copy h3{
-        font-size: 28px;
-    }
-
-    .info-copy h4{
-        font-size: 20px;
+    .info-copy h3, .info-copy h4{
+        padding: 0px;
+        margin: 0px;
+        font-size: 18px;
+        align-content: center;
     }
 
     .info-copy img{
-        max-width: 100px;
+        width: 40px;
     }
 }
 
