product details styles

--- a/styles/about-us-styles.css
+++ b/styles/about-us-styles.css
@@ -1,10 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
-*{
-    box-sizing: border-box;
+:root{
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: "DM Sans", sans-serif;
-    font-size: 20px;
+    font-size: 18px;
+    --color-primario: #fcc1c4;
+    --color-secundario: #fff7ee;
+    --text-color: #000000;
+    --menu-mobile-background: #FFE2E2;
 }
 
 body{
