--- a/styles/product-details-styles.css
+++ b/styles/product-details-styles.css
@@ -31,24 +31,84 @@ body{
     display: flex;
     justify-content: flex-start;
     padding: 20px;
+    margin-left: 50px;
+
 }
 
 .detail-component{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: flex-start;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: start;
+    grid-template-rows: auto auto;
+    gap: 20px;
+}
+
+.img-container{
+    grid-column: 1;
+    grid-row: 1/span 2;
 }
 
 .img-container img{
     width: 500px;
     height: 500px;
     border-radius: 5px;
-    margin-bottom: 50px;
-    margin-left: 100px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 200px;
+}
+
+.price-container{
+    grid-column: 2;
+    grid-row: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    row-gap:5px;
+}
+
+.add-to-cart{
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 10px 20px;
+    background-color: #2e5346;
+    border: none;
+    color: white;
+    transition: background-color 0.3s, transform 0.3s;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.add-to-cart:hover{
+    background-color: #07402d;
+    transform: translateY(-2px);
+}
+
+.details{
+    grid-column: 2;
+    grid-row: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-bottom: 0;
 }
 
 .details p{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+    margin-top: 0;
+    margin-right: 30px;
+}
+
+.details h2{
+    margin-top: 0;
+}
+
+.quantity-label{
+    display: block;
+    margin-bottom: 5px;
+    font-size: 14px;
+}
+
+.quantity{
+    width: 70px;
+    border: 1px solid;
+    height: 25px;
 }
