add stylesheet for breadcrumb + change primary color

--- a/styles/index-styles.css
+++ b/styles/index-styles.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
     font-family: "DM Sans", sans-serif;
     font-size: 20px;
-    --color-primario: #fcc1c4;
+    --color-primario: #FAE2D4;
     --color-secundario: #fff7ee;
     --text-color: #000000;
     --menu-mobile-background: #FFE2E2;
