--- a/styles/products-styles.css
+++ b/styles/products-styles.css
@@ -1,14 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
-*{
-    box-sizing: border-box;
+:root{
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: "DM Sans", sans-serif;
     font-size: 20px;
+    --color-primario: #FAE2D4;
+    --color-secundario: #fff7ee;
+    --text-color: #000000;
+    --menu-mobile-background: #FFE2E2;
 }
 
 body{
-    background-color: #fcc1c4;
+    margin: 0;
+    padding: 0;
+    background-color: var(--color-primario);
+    color: var(--text-color)
 }
 
 aside {
@@ -60,12 +68,18 @@ main {
 }
 
 .search-products {
+    position: relative;
+    padding: 6px;
+    max-width: 400px;
     background-color: #fff;
     border: 1px solid #948e8e;
-    border-radius: 1;
+    border-radius: 10px;
     font-size: 16px;
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
     box-sizing: border-box;
+}
+
+aside h1{
+    font-size: 24px;
 }
 
 aside h1, h2 {
