--- a/styles/index-styles.css
+++ b/styles/index-styles.css
@@ -10,6 +10,8 @@
     --color-secundario: #fff7ee;
     --text-color: #000000;
     --menu-mobile-background: #FFE2E2;
+    --verde:#2e5346;
+    --verde-oscuro: #07402d;
 }
 
 body{
@@ -195,7 +197,7 @@ main {
 
 .btn-option {
     padding: 10px 20px;
-    background-color: #2e5346;
+    background-color: var(--verde);
     color: white;
     border: none;
     border-radius: 5px;
@@ -207,7 +209,7 @@ main {
 }
 
 .btn-option:hover {
-    background-color: #96c6b5;
+    background-color: var(--verde-oscuro);
     transform: translateY(-2px);
 }
 
@@ -261,13 +263,17 @@ main {
     flex-direction: column;
     gap: 15px;
     margin: 0 auto 30px;   
-    width: 500px;
-    max-width: 100%;
+    width: 100%;
+    max-width: 500px;
+    align-items: center;
 }
 
 .form-group{
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    max-width: 350px;
 }
 
 .inputs-form{
@@ -276,19 +282,18 @@ main {
     border-radius: 5px;
     border: 1px solid #555756;
     box-sizing: border-box;
-    max-width: 500px;
-    min-width: 350px;
+    max-width: 350px;
 }
 
 textarea.inputs-form{
     width: 100%;
-    max-width: none;
     min-height: 120px;
 }
 
 .label-form{
     font-size: 18px;
     margin-bottom: 5px;
+    align-items: flex-start;
 }
 
 .btn-submit{
@@ -297,13 +302,13 @@ textarea.inputs-form{
     padding: 10px 15px;
     font-size: 14px;
     border: 1px gray;
-    background-color: #2e5346;
+    background-color: var(--verde);
     color: white;
     transition: background-color 0.3s, transform 0.3s;
 }
 
 .btn-submit:hover {
-    background-color: #96c6b5;
+    background-color: var(--verde-oscuro);
     transform: translateY(-2px);
 }
 
