--- a/styles/styles.css
+++ b/styles/styles.css
@@ -306,6 +306,92 @@ body{
     font-weight: 600;
 }
 
+/*------------------------ GRILLA PRODUCTOS --------------------------*/
+
+.products-section{
+    text-align: center;
+    padding: 40px 20px;
+    display: block;
+}
+
+.products-section h3{
+    font-size: 36px;
+    margin-bottom: 30px;
+    color: var(--color-strong-green);
+    margin-bottom: 10px;
+}
+
+.products-section p{
+    font-size: 20px;
+    margin-bottom: 70px;
+}
+
+.products-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 40px;
+    justify-items: center;
+    align-items: start;
+    max-width: 1200px;
+    margin: 0 auto;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0 40px;
+}
+
+.product-item {
+    background-color: var(--color-grey);
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+    width: 100%;
+    max-width: 280px;
+}
+
+.product-item:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.10);
+}
+
+.product-item img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+
+.product-item p {
+    font-size: 18px;
+    font-weight: 500;
+    margin: 12px 0 4px;
+}
+
+.product-item span {
+    display: block;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+
+
+@media (max-width: 1024px) {
+  .products-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .products-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 480px) {
+  .products-container {
+    grid-template-columns: 1fr;
+  }
+}
+
+
 /*--------------------- COMPONENTE CONOCE MAS ------------------------*/
 /*TO DO: cambiar bullets por checks*/
 
@@ -337,4 +423,24 @@ body{
     height: auto;
     border-radius: 5px;
 }
+
+.see-more-btn{
+    margin-top: 35px;
+}
+
+.more-btn{
+    background-color: var(--color-primario);
+    color: white;
+    text-decoration: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    transition: 0.3s;
+    font-size: 16px;
+    
+}
+
+.more-btn:hover{
+    background-color: var(--color-secundario);
+}
+
 
